--- a/thegame.cbp
+++ b/thegame.cbp
@@ -23,7 +23,11 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-march=corei7" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
+					<Add option="-Wnon-virtual-dtor" />
+					<Add option="-std=c++11" />
 					<Add directory="C:/projekty/thegame/" />
 				</Compiler>
 				<Linker>
